[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "crystal_kernel"
author = "kojix2"
author-email = "2xijok@gmail.com"
home-page = "https://github.com/kojix2/crystal_kernel"
requires = ["pexpect", "ipykernel"]
description-file = "README.md"
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

